CHANGES-1.1.txt
---------------

CHANGES IN CUPS V1.1.15

	- The cupsEncodeOptions() function now maintains a table
	  of known boolean and numeric options, and encodes all
	  other options as strings.
	- Now add a newline before the end-of-page code in the
	  PostScript filter; this fixes a problem with files
	  that don't end with a newline.
	- The image filters looked for the "orientation" option
	  instead of the correctly named "orientation-requested"
	  option.
	- The cupsEncodeOptions() function now handles mixed
	  integers and ranges.
	- New translation guide for developers to provide native
	  language support for CUPS.


CHANGES IN CUPS V1.1.14

	- The ippRead() function did not verify that the
	  attribute name length or string with language value
	  was not larger than the read buffer.
	- The scheduler set the signal handlers before loading
	  the configuration files the first time; this prevented
	  the RunAsUser directive from blocking server reloads.
	- Added Swedish message catalog.
	- The parallel backend now recognizes the /dev/printers
	  device directory under Linux 2.4.x.
	- MacOS X fixes.
	- The cupsaddsmb utility sent the server name after the
	  user information when executing the rpcclient program.
	  This caused problems with some versions of SAMBA
	  2.2.x.
	- The IPP backend did not pass the requesting user name
	  when checking on the print job status. This prevented
	  it from waiting for the job to complete when
	  communicating with some IPP implementations that
	  require it.


CHANGES IN CUPS V1.1.13

	- The lpstat command did not report jobs submitted to
	  regular printer classes.
	- The texttops filter didn't use sufficient precision
	  when positioning text with some values of cpi and lpi.
	  This could cause the alignment of text to stray.
	- cupsGetDests() didn't merge the options from the
	  /etc/cups/lpoptions file with ~/.lpoptions - options
	  in ~/.lpoptions overrode them completely.